--- a/research/001_data_ingestion.ipynb
+++ b/research/001_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'e:\\\\Project_2\\\\Chicken-Disease-Classification-project\\\\research'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-01 12:26:06,721: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-05-01 12:26:06,721: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-05-01 12:26:06,727: INFO: common: create directory at: artifacts]\n",
-      "[2024-05-01 12:26:06,730: INFO: common: create directory at: artifacts/data_ingestion]\n",
-      "[2024-05-01 12:26:08,877: INFO: 1819733195: artifacts/data_ingestion/data.zip downloaded with folowing info: \n",
+      "[2024-05-12 10:29:41,076: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-12 10:29:41,076: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-12 10:29:41,087: INFO: common: create directory at: artifacts]\n",
+      "[2024-05-12 10:29:41,087: INFO: common: create directory at: artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-12 10:29:42,751: INFO: 1819733195: artifacts/data_ingestion/data.zip downloaded with folowing info: \n",
       "Connection: close\n",
       "Content-Length: 11616915\n",
       "Cache-Control: max-age=300\n",
@@ -179,19 +185,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 8DB4:3AF0CD:6F1472:7CE8F4:6632893F\n",
+      "X-GitHub-Request-Id: 9C10:3E329C:163F254:1796DF0:6640E76C\n",
       "Accept-Ranges: bytes\n",
-      "Date: Wed, 01 May 2024 18:26:08 GMT\n",
+      "Date: Sun, 12 May 2024 16:29:42 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-yyz4565-YYZ\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-bfi-krnt7300067-BFI\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1714587968.193443,VS0,VE319\n",
+      "X-Timer: S1715531382.285232,VS0,VE102\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 0aa04d7a1e4e13cfcc26578a4855b02effe722d0\n",
-      "Expires: Wed, 01 May 2024 18:31:08 GMT\n",
+      "X-Fastly-Request-ID: 24551051ed25e80ab5e4eda4e54bced129061af4\n",
+      "Expires: Sun, 12 May 2024 16:34:42 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
